--- a/src/Components/Ofertas/Ofertas.css
+++ b/src/Components/Ofertas/Ofertas.css
@@ -1,21 +1,21 @@
 .ofertas {
   padding: 20px;
-  margin-top: 20px; /* Espaçamento entre seções */
-  background-color: #fefefe; /* Fundo claro */
-  text-align: center; /* Centraliza o título */
+  margin-top: 20px; 
+  background-color: #fefefe; 
+  text-align: center; 
 }
 
 .ofertas-title {
   font-size: 1.5rem;
-  color: #333; /* Cor do título */
-  margin-bottom: 20px; /* Espaçamento entre o título e as imagens */
+  color: #333; 
+  margin-bottom: 20px; 
   text-align: left;
   margin: 15px;
 }
 .ofertas-subtitle {
   font-size: 0.9rem;
-  color: #8A8A8A; /* Cor do título */
-  margin-bottom: 20px; /* Espaçamento entre o título e as imagens */
+  color: #8A8A8A; 
+  margin-bottom: 20px; 
   text-align: left;
   margin: 15px;
   font-style: italic;
@@ -23,9 +23,9 @@
 
 .ofertas-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 colunas iguais */
-  gap: 10px; /* Espaçamento entre as imagens */
-  justify-items: center; /* Centraliza os itens na grade */
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 10px; 
+  justify-items: center; 
   align-items: center;
   margin: 15px;
 }
@@ -33,14 +33,14 @@
 .ofertas-item img {
   max-width: 100%;
   height: auto;
-  max-height: 300px; /* Reduz o tamanho das imagens para caberem em linha */
-  object-fit: cover; /* Ajusta o conteúdo das imagens sem distorção */
+  max-height: 300px; 
+  object-fit: cover; 
 
 }
 .ofertas-item-title{
   font-size: 1.2rem;
-  color: #1D1D1D; /* Cor do título */
-  margin-bottom: 20px; /* Espaçamento entre o título e as imagens */
+  color: #1D1D1D; 
+  margin-bottom: 20px; 
   text-align: left;
   margin: 15px;
   font-style: normal;
@@ -49,8 +49,8 @@
 
 .ofertas-item-title3 {
   font-size: 1.1rem;
-  color: #1D1D1D; /* Cor do título */
-  margin-bottom: 20px; /* Espaçamento entre o título e as imagens */
+  color: #1D1D1D; 
+  margin-bottom: 20px; 
   text-align: left;
   margin: 15px;
   font-style: normal;
@@ -59,8 +59,8 @@
 
 .ofertas-item-subtitle{
   font-size: 0.9rem;
-  color: #8A8A8A; /* Cor do título */
-  margin-bottom: 20px; /* Espaçamento entre o título e as imagens */
+  color: #8A8A8A; 
+  margin-bottom: 20px; 
   text-align: left;
   margin: 15px;
   line-height: 1.5;
@@ -77,8 +77,8 @@
 }
 .ofertas-item-subtitle3{
   font-size: 0.9rem;
-  color: #8A8A8A; /* Cor do título */
-  margin-bottom: 15px; /* Espaçamento entre o título e as imagens */
+  color: #8A8A8A; 
+  margin-bottom: 15px; 
   text-align: left;
   margin: 15px;
   line-height: 1.5;
@@ -86,10 +86,10 @@
 
 
 .saiba-mais {
-  color: #000000; /* Cor do link, ajuste conforme necessário */
+  color: #000000; 
   text-decoration: underline;
   cursor: pointer;
-  margin-top: 5px; /* Ajusta o espaçamento superior do link */
+  margin-top: 5px; 
   text-align: left;
   font-size: 0.9rem;
   margin-right:75%;
