--- a/src/Components/Assets/Navbar/Navbar.css
+++ b/src/Components/Assets/Navbar/Navbar.css
@@ -67,7 +67,7 @@
 .nav-left {
   display: flex;
   align-items: center;
-  gap: 20px; /* Espaçamento entre logo e menu */
+  gap: 20px; 
   padding-left: 50px;
 }
 
@@ -116,7 +116,7 @@
 .nav-cart {
   display: flex;
   align-items: center;
-  position: relative; /* Adicionado */
+  position: relative; 
 }
 
 
@@ -133,11 +133,11 @@
   border-radius: 50%;
   padding: 2px 6px;
   font-size: 10px;
-  display: none; /* Inicialmente oculto */
+  display: none; 
 }
 
 .nav-cart .cart-count.show {
-  display: inline-block; /* Exibe quando o carrinho tem itens */
+  display: inline-block; 
 }
 
 @media (max-width: 768px) {
@@ -148,11 +148,11 @@
   }
 
   .nav-menu {
-    display: none; /* Oculta o menu */
+    display: none; 
   }
 
   .nav-toggle {
-    display: block; /* Exibe o ícone de menu */
+    display: block; 
   }
 
   .nav-logo {
