--- a/src/Components/Lancamentos/lancamentos.css
+++ b/src/Components/Lancamentos/lancamentos.css
@@ -1,20 +1,20 @@
 .lancamentos {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Alinha à esquerda */
-    padding: 20px; /* Adiciona espaçamento interno */
+    align-items: flex-start; 
+    padding: 20px; 
   }
   
   .lancamentos p {
-    font-size: 1.5rem; /* Ajusta o tamanho do título */
+    font-size: 1.5rem; 
     color: #333;
-    text-align: left; /* Mantém o título à esquerda */
+    text-align: left; 
     margin-bottom: 25px;
   }
   
   .lancamentos-peças {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Grid flexível para responsividade */
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
     gap: 15px;
     width: 100%;
   }
@@ -22,16 +22,16 @@
   .lancamentos-peças .peças {
     width: 100%;
     max-width: 230px;
-    text-align: left; /* Alinha o conteúdo à esquerda */
-    font-size: 1.0rem; /* Reduz o tamanho da fonte dos nomes dos sapatos */
+    text-align: left; 
+    font-size: 1.0rem; 
   }
   .lancamentos-peças .peças p{
-    font-size: 1.0rem; /* Reduz o tamanho da fonte dos nomes dos sapatos */
+    font-size: 1.0rem; 
     color: #1D1D1D;
   }
 
   .lancamentos-peças .peças-preços-novos {
-    font-size: 0.9rem; /* Reduz o tamanho da fonte dos nomes dos sapatos */
+    font-size: 0.9rem; 
     color: #1D1D1D;
   }
   .lancamentos-peças img {
@@ -42,7 +42,7 @@
   .lancamentos-peças .peças-preços-velhos {
     color: #333;
     text-decoration: line-through;
-    font-size: 0.85rem; /* Ajusta o tamanho do preço antigo */
+    font-size: 0.85rem; 
   }
   
   @media (max-width: 768px) {
