--- a/src/index.scss
+++ b/src/index.scss
@@ -16,10 +16,10 @@ code {
 body, html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* Impede a rolagem horizontal */
+  overflow-x: hidden; 
 }
 
 .container {
-  max-width: 100vw; /* Garante que a largura do conteúdo não ultrapasse a tela */
+  max-width: 100vw; 
   overflow-x: hidden;
 }
